<resources>
    <string name="app_name">LTM</string>
    <string name="logo_name">LTM</string>
    <string name="slogan_name">Learn Train Master</string>
    <string name="powered_by">Learn-Train-Master</string>


    <!--heading -->
    <string name="first_slide_title">Search </string>
    <string name="second_slide_title">Language</string>
    <string name="third_slide_title">Code Well</string>
    <string name="fourth_slide_title">Relax</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can learn here different languages in different way.</string>
    <string name="second_slide_desc">learn from basic and train yourself to be expert as master.</string>
    <string name="third_slide_desc">Practice daily to get full score in quiz.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app then you do not have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--   Dashboard Strings   -->

    <!--  3_cards_names  -->
    <string name="video_lecture">Video</string>
    <string name="audio_lecture">Audio</string>
    <string name="text_lecture">Text</string>

    <!-- Categories-->
    <string name="hotels">Hotels</string>
    <string name="restorents">Restorents</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!--  Title and Descriptions  -->
    <string name="featured_locations">All Popular Languages</string>
    <string name="featured_locations_descriptions">All the most popular languages that are growing day by day in the market</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <!-- Menu Items -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="rateus">Rate Us</string>


</resources>