<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon"/>

        <item
            android:id="@+id/nav_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/categories"/>

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search"/>
    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login"/>

                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile"/>

                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout"/>

            </group>

        </menu>



    </item>

    <item android:title="Share">

        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share"/>

                <item
                    android:id="@+id/nav_rateus"
                    android:title="@string/rateus"
                    android:icon="@drawable/rate"/>

            </group>

        </menu>



    </item>
</menu>