<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardScreen"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/navigationTheme"
        android:background="@color/home_background"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

        <!-- menu and plus bar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_sidebar" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_plus" />

        </RelativeLayout>

        <!-- scrollview for scroll -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- logo name and search_bar-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:text="@string/logo_name"
                        android:textSize="28sp" />

                    <!-- search section -->

                    <RelativeLayout
                        android:id="@+id/SearchPage"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@id/app_name"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@android:color/white"
                        android:elevation="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:text="@string/search_text" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/search_icon" />


                    </RelativeLayout>


                </RelativeLayout>

                <!-- most Search in the town -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <!--  card_1 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_1"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/videocategories"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/flame" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/video_lecture" />
                    </LinearLayout>

                    <!--  card_2 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_2"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/textcategories"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_book" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/text_lecture" />
                    </LinearLayout>

                    <!--  card_3 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/card_3"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/audiocategories"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_quiz" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/quiz"/>
                    </LinearLayout>


                </LinearLayout>

                <!-- featured location card -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/banner_background_light">

                    <!-- featured card -->
                    <LinearLayout
                        android:id="@+id/featured_backgroud"
                        android:layout_width="170dp"
                        android:layout_height="280dp"
                        android:layout_margin="10dp"
                        android:elevation="10dp"
                        android:background="@drawable/featured_gradient"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/featured_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/featured_locations_descriptions" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="290dp"
                        android:layout_toRightOf="@id/featured_backgroud"
                        android:background="@color/home_background" />

                </RelativeLayout>

                <!-- most viewed section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/most_viewed_locations"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20dp" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/view_all" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/most_viewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_marginTop="20dp" />
                </LinearLayout>

                <!-- categories section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/categories"
                            android:textAllCaps="true"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/category_viewall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="sans-serif-condensed"
                            android:text="@string/view_all" />
                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="170dp" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>